data/derived/fa15/progs/unify/prog0592.ml.out
Characters 489-502:
  | Op (m, n, o) -> let d = (eval(m, x, y)*eval(n, x, y)*eval(o, x, y))/(eval(m, x, y)+eval(n, x, y)+eval(o,x,y)) in if d > 1.0 then 1.0 else if d < -1.0 then -1.0 else d;;
                             ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
